Refactor - IPC class

--- a/IHExt/IHExt.csproj
+++ b/IHExt/IHExt.csproj
@@ -84,6 +84,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
